--- a/app/src/main/res/layout/activity_user_profile_menu.xml
+++ b/app/src/main/res/layout/activity_user_profile_menu.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".presentation.UserProfile.UserProfileMenu">
+    tools:context=".presentation.UserProfileActivity.UserProfileMenu">
 
     <LinearLayout
         android:id="@+id/profile_linear_layout"
