--- a/app/src/main/res/layout/row.xml
+++ b/app/src/main/res/layout/row.xml
@@ -7,7 +7,7 @@
     android:orientation="vertical"
     android:id="@+id/row_forAds"
     android:padding="3dp"
-    tools:context=".presentation.PostingAds.RecyclerViewAdapter">
+    tools:context=".presentation.PostingAdActivity.RecyclerViewAdapter">
 
 
         <TextView
